# apps/web-frontend/src/routes/routes.ts
@@ -2,9 +2,11 @@ export const routes = {
   register: '/',
   verify: '/verify',
   login: '/login',
+  loginMfa: '/login/mfa',
   tenantSelection: '/tenant-select',
   application: '/application',
   profile: '/profile',
   passwordRecovery: '/password/recovery',
   passwordChange: '/password/change',
+  mfa: '/security/mfa',
 } as const;
